@@ -50,59 +50,95 @@ $variables['autorun']                = filter_input (INPUT_POST, 'autorun', FILT
 // Database driven language entries
 $langvars = null;
 $langvars = BntTranslate::load ($db, $lang, array ('common', 'regional', 'footer', 'global_includes', 'create_universe'));
-
 $variables['update_ticks_results']['sched'] = $sched_ticks;
+$local_table_timer = new Timer;
 
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}scheduler (run_once, ticks_full, sched_file, last_run) VALUES ('Y', $sched_turns, 'sched_turns.php', ?)", array (time ()));
 $variables['update_turns_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
 $variables['update_turns_results']['sched'] = $sched_turns;
+$local_table_timer->stop ();
+$variables['update_turns_results']['elapsed'] = $local_table_timer->elapsed ();
 
 // This is causing errors at the moment, disabling until we get clean solutions for it.
+//$local_table_timer->start (); // Start benchmarking
 //$resxx = $db->Execute ("INSERT INTO {$db->prefix}scheduler (run_once, ticks_full, sched_file, last_run) VALUES ('Y', $sched_turns, 'sched_xenobe.php', ?)", array (time ()));
 //$variables['update_xenobe_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
 $variables['update_xenobe_results']['result'] = "DISABLED!";
 $variables['update_xenobe_results']['sched'] = $sched_turns;
+//$local_table_timer->stop ();
+//$variables['update_xenobe_results']['elapsed'] = $local_table_timer->elapsed ();
 
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}scheduler (run_once, ticks_full, sched_file, last_run) VALUES ('Y', $sched_igb, 'sched_igb.php', ?)", array (time ()));
 $variables['update_igb_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
 $variables['update_igb_results']['sched'] = $sched_igb;
+$local_table_timer->stop ();
+$variables['update_igb_results']['elapsed'] = $local_table_timer->elapsed ();
 
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}scheduler (run_once, ticks_full, sched_file, last_run) VALUES ('Y', $sched_news, 'sched_news.php', ?)", array (time ()));
 $variables['update_news_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
 $variables['update_news_results']['sched'] = $sched_news;
+$local_table_timer->stop ();
+$variables['update_news_results']['elapsed'] = $local_table_timer->elapsed ();
 
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}scheduler (run_once, ticks_full, sched_file, last_run) VALUES ('Y', $sched_planets, 'sched_planets.php', ?)", array (time ()));
 $variables['update_planets_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
 $variables['update_planets_results']['sched'] = $sched_planets;
+$local_table_timer->stop ();
+$variables['update_planets_results']['elapsed'] = $local_table_timer->elapsed ();
 
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}scheduler (run_once, ticks_full, sched_file, last_run) VALUES ('Y', $sched_ports, 'sched_ports.php', ?)", array (time ()));
 $variables['update_ports_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
 $variables['update_ports_results']['sched'] = $sched_ports;
+$local_table_timer->stop ();
+$variables['update_ports_results']['elapsed'] = $local_table_timer->elapsed ();
 
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}scheduler (run_once, ticks_full, sched_file, last_run) VALUES ('Y', $sched_turns, 'sched_tow.php', ?)", array (time ()));
 $variables['update_tow_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
 $variables['update_tow_results']['sched'] = $sched_turns; // Towing occurs at the same time as turns
+$local_table_timer->stop ();
+$variables['update_tow_results']['elapsed'] = $local_table_timer->elapsed ();
 
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}scheduler (run_once, ticks_full, sched_file, last_run) VALUES ('Y', $sched_ranking, 'sched_ranking.php', ?)", array (time ()));
 $variables['update_ranking_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
 $variables['update_ranking_results']['sched'] = $sched_ranking;
+$local_table_timer->stop ();
+$variables['update_ranking_results']['elapsed'] = $local_table_timer->elapsed ();
 
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}scheduler (run_once, ticks_full, sched_file, last_run) VALUES ('Y', $sched_degrade, 'sched_degrade.php', ?)", array (time ()));
 $variables['update_degrade_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
 $variables['update_degrade_results']['sched'] = $sched_degrade;
+$local_table_timer->stop ();
+$variables['update_degrade_results']['elapsed'] = $local_table_timer->elapsed ();
 
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}scheduler (run_once, ticks_full, sched_file, last_run) VALUES ('Y', $sched_apocalypse, 'sched_apocalypse.php', ?)", array (time ()));
 $variables['update_apoc_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
 $variables['update_apoc_results']['sched'] = $sched_apocalypse;
+$local_table_timer->stop ();
+$variables['update_apoc_results']['elapsed'] = $local_table_timer->elapsed ();
 
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}scheduler (run_once, ticks_full, sched_file, last_run) VALUES ('Y', $sched_thegovernor, 'sched_thegovernor.php', ?)", array (time ()));
 $variables['update_gov_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
 $variables['update_gov_results']['sched'] = $sched_thegovernor;
+$local_table_timer->stop ();
+$variables['update_gov_results']['elapsed'] = $local_table_timer->elapsed ();
 
 // This adds a news item into the newly created news table
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}news (headline, newstext, date, news_type) " .
               "VALUES ('Big Bang!','Scientists have just discovered the Universe exists!',NOW(), 'col25')");
 $variables['first_news_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
+$local_table_timer->stop ();
+$variables['first_news_results']['elapsed'] = $local_table_timer->elapsed ();
 
 if ($bnt_ls === true)
 {
@@ -114,8 +150,11 @@ if ($bnt_ls === true)
 // FIX table_footer ($langvars['l_cu_completed']);
 // FIX table_header ($langvars['l_cu_account_info'] ." " . $admin_name, "h1");
 
+$local_table_timer->start (); // Start benchmarking
 $update = $db->Execute ("INSERT INTO {$db->prefix}ibank_accounts (ship_id,balance,loan) VALUES (1,0,0)");
 $variables['ibank_results']['result'] = DbOp::dbResult ($db, $update, __LINE__, __FILE__);
+$local_table_timer->stop ();
+$variables['ibank_results']['elapsed'] = $local_table_timer->elapsed ();
 $stamp = date ("Y-m-d H:i:s");
 
 // Hash the password.  $hashed_pass will be a 60-character string.
@@ -133,13 +172,20 @@ $adm_ship_sql = "INSERT INTO {$db->prefix}ships " .
                 "'$admin_mail', $start_turns, $start_armor, $start_credits, 1, $start_energy, " .
                 "$start_fighters, '$stamp', " .
                 "'1.1.1.1', '$default_lang')";
+$local_table_timer->start (); // Start benchmarking
 $resxx = $db->Execute ($adm_ship_sql);
 $variables['admin_account_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
+$local_table_timer->stop ();
+$variables['admin_account_results']['elapsed'] = $local_table_timer->elapsed ();
 $variables['admin_name'] = $admin_name;
 
+$local_table_timer->start (); // Start benchmarking
 $adm_terri = $db->qstr ($admin_zone_name);
 $resxx = $db->Execute ("INSERT INTO {$db->prefix}zones (zone_name, owner, corp_zone, allow_beacon, allow_attack, allow_planetattack, allow_warpedit, allow_planet, allow_trade, allow_defenses, max_hull) VALUES ($adm_terri, 1, 'N', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 0)");
 $variables['admin_zone_results']['result'] = DbOp::dbResult ($db, $resxx, __LINE__, __FILE__);
+$local_table_timer->stop ();
+$variables['admin_zone_results']['elapsed'] = $local_table_timer->elapsed ();
+
 $template->AddVariables ('langvars', $langvars);
 
 // Pull in footer variables from footer_t.php
