@@ -84,7 +84,6 @@ class BntBigBang
 
         $bigbang_info['next_step'] = array_search ($bigbang_files[$j], $bigbang_files);
         $bigbang_info['files'] = $bigbang_files;
-#        natsort ($bigbang_info['files']);
         return $bigbang_info;
     }
 }
