@@ -481,16 +481,16 @@ l_cu_insert_error                       = "Error during insertion";
 l_cu_config_scheduler_title             = "Create Universe - Configuring game scheduler"; // Step 8
 l_cu_update_ticks                       = "Update ticks will occur every [sched] minutes.";
 l_cu_turns_occur                        = "Turns will occur every [sched] minutes";
-l_cu_xenobes_minutes                    = "Xenobes will play every [sched] minutes.";
-l_cu_igb_interest                       = "Interest on IGB accounts will be accumulated every [sched] minutes.";
-l_cu_news_gen                           = "News will be generated every [sched] minutes.";
-l_cu_planets_minutes                    = "Planets will generate production every [sched] minutes.";
-l_cu_port_regen                         = "Ports will regenerate every [sched] minutes.";
-l_cu_tow_sched                          = "Ships will be towed from fed sectors every [sched] minutes.";
-l_cu_ranking_sched                      = "Rankings will be generated every [sched] minutes.";
-l_cu_sector_degrade                     = "Sector defences will degrade every [sched] minutes.";
-l_cu_apoc_sched                         = "The planetary apocalypse will occur every [sched] minutes.";
-l_cu_governor_sched                     = "The Governor will run every [sched] minutes.";
+l_cu_xenobes_minutes                    = "Xenobes will play every [sched] minutes";
+l_cu_igb_interest                       = "Interest on IGB accounts will be accumulated every [sched] minutes";
+l_cu_news_gen                           = "News will be generated every [sched] minutes";
+l_cu_planets_minutes                    = "Planets will generate production every [sched] minutes";
+l_cu_port_regen                         = "Ports will regenerate every [sched] minutes";
+l_cu_tow_sched                          = "Ships will be towed from fed sectors every [sched] minutes";
+l_cu_ranking_sched                      = "Rankings will be generated every [sched] minutes";
+l_cu_sector_degrade                     = "Sector defences will degrade every [sched] minutes";
+l_cu_apoc_sched                         = "The planetary apocalypse will occur every [sched] minutes";
+l_cu_governor_sched                     = "The Governor will run every [sched] minutes";
 l_cu_insert_news                        = "Inserting first news item";
 l_cu_account_info                       = "Inserting Acount Information for";
 l_cu_ibank_info                         = "Inserting ibank Information for";
