@@ -32,7 +32,7 @@
     </tr>
     {if $variables['update_turns_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_turns_occur']|replace:'[sched]':$variables['update_turns_results'].sched}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_turns_occur']|replace:'[sched]':$variables['update_turns_results'].sched} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['update_turns_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -43,7 +43,7 @@
     {/if}
     {if $variables['update_xenobe_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_xenobes_minutes']|replace:'[sched]':$variables['update_xenobe_results'].sched}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_xenobes_minutes']|replace:'[sched]':$variables['update_xenobe_results'].sched} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['update_xenobe_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -54,7 +54,7 @@
     {/if}
     {if $variables['update_igb_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_igb_interest']|replace:'[sched]':$variables['update_igb_results'].sched}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_igb_interest']|replace:'[sched]':$variables['update_igb_results'].sched} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['update_igb_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -65,7 +65,7 @@
     {/if}
     {if $variables['update_news_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_news_gen']|replace:'[sched]':$variables['update_news_results'].sched}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_news_gen']|replace:'[sched]':$variables['update_news_results'].sched} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['update_news_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -76,7 +76,7 @@
     {/if}
     {if $variables['update_planets_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_planets_minutes']|replace:'[sched]':$variables['update_planets_results'].sched}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_planets_minutes']|replace:'[sched]':$variables['update_planets_results'].sched} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['update_planets_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -87,7 +87,7 @@
     {/if}
     {if $variables['update_ports_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_port_regen']|replace:'[sched]':$variables['update_ports_results'].sched}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_port_regen']|replace:'[sched]':$variables['update_ports_results'].sched} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['update_ports_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -98,7 +98,7 @@
     {/if}
     {if $variables['update_tow_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_tow_sched']|replace:'[sched]':$variables['update_tow_results'].sched}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_tow_sched']|replace:'[sched]':$variables['update_tow_results'].sched} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['update_tow_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -109,7 +109,7 @@
     {/if}
     {if $variables['update_ranking_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_ranking_sched']|replace:'[sched]':$variables['update_ranking_results'].sched}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_ranking_sched']|replace:'[sched]':$variables['update_ranking_results'].sched} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['update_ranking_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -120,7 +120,7 @@
     {/if}
     {if $variables['update_degrade_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_sector_degrade']|replace:'[sched]':$variables['update_degrade_results'].sched} </font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_sector_degrade']|replace:'[sched]':$variables['update_degrade_results'].sched}  - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['update_degrade_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -131,7 +131,7 @@
     {/if}
     {if $variables['update_apoc_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_apoc_sched']|replace:'[sched]':$variables['update_apoc_results'].sched}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_apoc_sched']|replace:'[sched]':$variables['update_apoc_results'].sched} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['update_apoc_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -142,7 +142,7 @@
     {/if}
     {if $variables['update_gov_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_governor_sched']|replace:'[sched]':$variables['update_gov_results'].sched}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_governor_sched']|replace:'[sched]':$variables['update_gov_results'].sched} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['update_gov_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -153,7 +153,7 @@
     {/if}
     {if $variables['first_news_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_insert_news']}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_insert_news']} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['first_news_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -170,7 +170,7 @@
     </tr>
     {if $variables['ibank_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_ibank_info']} {$variables['admin_name']}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_ibank_info']} {$variables['admin_name']}  - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['ibank_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -184,7 +184,7 @@
     </tr>
     {if $variables['admin_account_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_insert_shipinfo_admin']} {$variables['admin_name']}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_insert_shipinfo_admin']} {$variables['admin_name']} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['admin_account_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
@@ -195,7 +195,7 @@
     {/if}
     {if $variables['admin_zone_results']['result'] === true}
     <tr title='{$langvars['l_cu_no_errors_found']}'>
-      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_insert_zoneinfo_admin']} {$variables['admin_name']}</font></td>
+      <td width="600" bgcolor="#ccccff"><font size="1" color="#000000">{$langvars['l_cu_insert_zoneinfo_admin']} {$variables['admin_name']} - {$langvars['l_cu_completed_in']|replace:'[time]':$variables['admin_zone_results'].elapsed}</font></td>
       <td width="100" align="center" bgcolor="#C0C0C0"><font size="1" color="Blue">{$langvars['l_cu_inserted']}</font></td>
     </tr>
     {else}
